--- a/nosterra.css
+++ b/nosterra.css
@@ -1,3 +1,7 @@
+.sheet-meme-toggle[value="1"] ~ .sheet-licensecontainer {
+  font-family: "Comic Sans MS", cursive, sans-serif !important;
+}
+
 .sheet-pc,
 .sheet-npc {
   display: none;
@@ -684,8 +688,7 @@ button[type=roll] * {
   padding-top: 5px;
 }
 
-.sheet-exhaustion-toggle[value="0"] ~ .sheet-exhaustion,
-.sheet-radiation-toggle[value="0"] ~ .sheet-radiation {
+.sheet-exhaustion-toggle[value="0"] ~ .sheet-exhaustion {
   display: none;
 }
 
@@ -745,7 +748,7 @@ button[type=roll] * {
 }
 
 .sheet-ac-mr-speed-container div {
-  width: 31.45%;
+  width: 31.35%;
   height: 100%;
   border: 1px solid #666;
   border-radius: 5px;
@@ -940,7 +943,7 @@ button[type=roll] * {
 }
 
 .sheet-textbox textarea {
-  width: calc(100% - 10px);
+  width: 100%;
   font-size: 10px;
   resize: vertical;
   border: none;
